#1000 - fix step alignment

--- a/src/components/Editor/components/MySteps/components/MyStepsList/components/Step/styles.scss
+++ b/src/components/Editor/components/MySteps/components/MyStepsList/components/Step/styles.scss
@@ -11,7 +11,7 @@
     transition: all 1s;
 
     .ttsBtnContainer {
-        margin-top: 5px;
+        margin-top: 10px;
         margin-left: -10px;
         margin-right: 10px;
 
@@ -37,6 +37,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     padding: 3px;
+    padding-top: 10px;
 }
 
 .btnContainer {
